changed fetch ledger json response
