# crates/server/openapi.yaml
@@ -1141,16 +1141,16 @@ components:
 
             If `true`, the client should make another request with the last know registry index as the startingIndex path parameter.
           example: false
-        startingIndex:
-          type: integer
-          description: The starting registry index for the batch of ledger records.
-          example: 0
         ledger:
           type: array
           description: The array of ledger logId and recordId records.
           items:
             type: array
-            minItems: 2
-            maxItems: 2
+            minItems: 3
+            maxItems: 3
             items:
-              "$ref": "#/components/schemas/AnyHash"
+              oneOf:
+                type: integer
+                "$ref": "#/components/schemas/AnyHash"
+            example:
+              [3, "sha256:b5bb9d8014a0f9b1d61e21e796d78dccdf1352f23cd32812f4850b878ae4944c", "sha256:7d865e959b2466918c9863afca942d0fb89d7c9ac0c99bafc3749504ded97730"]
