# crates/server/src/datastore/postgres/mod.rs
@@ -456,23 +456,32 @@ impl DataStore for PostgresDataStore {
         &self,
         starting_index: RegistryIndex,
         limit: usize,
-    ) -> Result<Vec<LogLeaf>, DataStoreError> {
+    ) -> Result<Vec<(RegistryIndex, LogLeaf)>, DataStoreError> {
         let mut conn = self.pool.get().await?;
 
         Ok(schema::records::table
             .inner_join(schema::logs::table)
-            .select((schema::logs::log_id, schema::records::record_id))
+            .select((
+                schema::records::registry_log_index,
+                schema::logs::log_id,
+                schema::records::record_id,
+            ))
             .filter(schema::records::registry_log_index.gt(starting_index as i64))
             .order(schema::records::registry_log_index.asc())
             .limit(limit as i64)
-            .load::<(ParsedText<AnyHash>, ParsedText<AnyHash>)>(&mut conn)
+            .load::<(Option<i64>, ParsedText<AnyHash>, ParsedText<AnyHash>)>(&mut conn)
             .await?
             .into_iter()
-            .map(|(log_id, record_id)| LogLeaf {
-                log_id: log_id.0.into(),
-                record_id: record_id.0.into(),
+            .map(|(registry_index, log_id, record_id)| {
+                (
+                    registry_index.unwrap() as RegistryIndex,
+                    LogLeaf {
+                        log_id: log_id.0.into(),
+                        record_id: record_id.0.into(),
+                    },
+                )
             })
-            .collect::<Vec<LogLeaf>>())
+            .collect::<Vec<(RegistryIndex, LogLeaf)>>())
     }
 
     async fn get_log_leafs_with_registry_index(
